# basalt-python

./: .gitignore  DEVELOPMENT.md  MIGRATION_GUIDE.md  PROJECT_INDEX.md  README.md  RELEASING.md  coverage.json  dev-requirements.txt  project.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: code-checks.yml  publish-to-pypi.yml  python-tests.yml
basalt/: __init__.py  basalt_facade.py  basaltsdk.py  client.py  config.py  test.py  utils.py
basalt/_internal/: base_client.py  exceptions.py  http.py
basalt/datasets/: __init__.py  client.py  file_upload.py  models.py
basalt/endpoints/: create_dataset_item.py  describe_prompt.py  get_dataset.py  get_prompt.py  list_datasets.py  list_prompts.py
basalt/endpoints/monitor/: __init__.py  create_experiment.py  send_trace.py
basalt/experiments/: client.py
basalt/instrumentation/: __init__.py  openai.py  semconv.py
basalt/objects/: README.md  __init__.py  base_log.py  dataset.py  experiment.py  generation.py  log.py  prompt.py  trace.py
basalt/observability/: __init__.py  api.py  config.py  context_managers.py  decorators.py  evaluators.py  instrumentation.py  processors.py  request_tracing.py  semconv.py  spans.py  token_usage.py  trace.py  trace_context.py  types.py  utils.py
basalt/prompts/: __init__.py  client.py  models.py
basalt/resources/datasets/: dataset_types.py
basalt/resources/monitor/: __init__.py  base_log_types.py  evaluator_types.py  experiment_types.py  generation_types.py  log_types.py  monitorsdk_types.py  trace_types.py
basalt/resources/prompts/: prompt_types.py
basalt/ressources/datasets/: dataset_types.py
basalt/ressources/monitor/: base_log_types.py  evaluator_types.py  generation_types.py  log_types.py  monitorsdk_types.py  trace_types.py
basalt/ressources/prompts/: prompt_types.py
basalt/sdk/: README.md  datasetsdk.py  monitorsdk.py  promptsdk.py
basalt/sdk/adapters/: __init__.py  dataset_adapter.py  prompt_adapter.py
basalt/tracing/: __init__.py  decorators.py  provider.py  semconv.py
basalt/types/: __init__.py  cache.py
basalt/utils/: api.py  dtos.py  errors.py  flusher.py  logger.py  memcache.py  networker.py  protocols.py  utils.py
docs/: 01-introduction.md  02-getting-started.md  03-prompts.md  04-datasets.md  05-observability-basics.md  05-observability.md  06-manual-tracing.md  08-async-observability.md  09-auto-instrumentation.md  10-evaluators.md  11-experiments.md  12-user-org-tracking.md  13-trace-context.md
examples/: .gitignore  anthropic_example.py  async_observe_example.py  dataset_api_example.py  dataset_example.py  dataset_sdk_async_demo.ipynb  dataset_sdk_demo.ipynb  gemini_random_data_example.py  mistral_example.py  monitor_sdk_async_demo.ipynb  monitor_sdk_demo.ipynb  multi_exporter_example.py  notebook_py.py  observability_playbook.ipynb  observe_decorator_example.py  openai_example.py  prompt_api_example.py  prompt_sdk_async_demo.ipynb  prompt_sdk_demo.ipynb  prompts_context_manager_example.py  telemetry_example.py
examples/dataset/: dataset_api_example.py  pyproject.toml  run.sh
examples/gemini_simple/: pyproject.toml  run.sh
examples/microservices/: .gitignore  pyproject.toml  run.sh
examples/microservices/service_a/: __init__.py  main.py
examples/microservices/service_b/: __init__.py  main.py
examples/multi_exporter/: multi_exporter_example.py  pyproject.toml  run.sh
examples/openai_experiment/: openai_experiment_example.py  pyproject.toml  run.sh
examples/openai_simple/: openai_example.py  pyproject.toml  run.sh
examples/openai_v2/: openai_v2_example.py  pyproject.toml  run.sh
examples/reproduce_trace_bug/: pyproject.toml  run.sh  service_a.py  service_b.py
scripts/: release.sh
tests/: test_api.py  test_basalt_client_experiments.py  test_basalt_facade.py  test_client.py  test_client_telemetry.py  test_config.py  test_datasetsdk.py  test_datasetsdk_async.py  test_deprecation_warnings.py  test_get_prompt_endpoint.py  test_memcache.py  test_monitor_sdk.py  test_monitorsdk_async.py  test_networker.py  test_observe_decorators.py  test_promptsdk.py  test_promptsdk_async.py  test_send_trace_endpoint.py  test_span_utils.py  test_utils.py
tests/datasets/: test_client.py  test_file_upload.py  test_integration.py
tests/experiments/: test_client.py
tests/instrumentation/: test_openai.py
tests/internal/: test_http.py
tests/observability/: test_api.py  test_config.py  test_context_managers.py  test_decorators.py  test_evaluators.py  test_experiment_propagation.py  test_feature_slug_propagation.py  test_instrumentation.py  test_multi_exporters.py  test_processors.py  test_request_tracing.py  test_resilient_exporters.py  test_should_evaluate_propagation.py  test_trace.py  utils.py
tests/otel/: generate_sample_otlp_json.py  otlp_utils.py  test_llm_instrumentation.py
tests/prompts/: conftest.py  test_client.py  test_context_manager.py  test_integration.py
tests/tracing/: __init__.py  test_decorators.py  test_provider.py
