# This section defines the build system. It's standard for setuptools.
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basalt_sdk"
version = "1.0.0-rc1"
description = "Basalt SDK for python"
readme = "README.md" # Replaces long_description
license = "MIT"
keywords = ["basalt", "ai", "sdk", "python"]
authors = [
    { name = "Basalt", email = "support@getbasalt.ai" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.32",
    "aiohttp>=3.8.0",
    "jinja2>=3.1.0",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-semantic-conventions",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "wrapt",
    "pytest-asyncio>=1.2.0",
]

# This section lists URLs, replacing the `url` parameter
[project.urls]
Homepage = "https://github.com/basalt-ai/basalt-python"

# This replaces dev-requirements.txt
[project.optional-dependencies]
dev = [
    # Build tools
    "setuptools",
    "wheel",
    "twine",
    # Test dependencies
    "parameterized",
    "requests", # Often included for testing API clients
    # Modern tooling
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage",
]


# A recommended configuration for Ruff, the modern linter/formatter
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"
