# This section defines the build system. It's standard for setuptools.
[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basalt_sdk"
version = "1.0.1"
description = "Basalt SDK for python"
readme = "README.md" # Replaces long_description
license = "MIT"
keywords = ["basalt", "ai", "sdk", "python"]
authors = [
    { name = "Basalt", email = "support@getbasalt.ai" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jinja2>=3.1.6",
    "opentelemetry-instrumentation~=0.59b0",
    "opentelemetry-instrumentation-httpx~=0.59b0",
    "opentelemetry-semantic-conventions~=0.59b0",
    "opentelemetry-api~=1.39.1",
    "opentelemetry-sdk~=1.39.1",
    "opentelemetry-exporter-otlp~=1.39.1",
    "wrapt~=1.17.3",
    "httpx>=0.28.1",
]

# This section lists URLs, replacing the `url` parameter
[project.urls]
Homepage = "https://github.com/basalt-ai/basalt-python"

# This replaces dev-requirements.txt
[project.optional-dependencies]
# LLM Provider Instrumentations
openai = [
    "opentelemetry-instrumentation-openai~=0.50.1",
]
anthropic = [
    "opentelemetry-instrumentation-anthropic~=0.50.1",
]
google-generativeai = [
    "opentelemetry-instrumentation-google-generativeai~=0.50.1",
]
# Note: google-genai instrumentation not yet available in openllmetry
 google-genai = [
     "opentelemetry-instrumentation-google-genai~=0.5b0",
 ]

bedrock = [
    "opentelemetry-instrumentation-bedrock~=0.50.1",
]
vertex-ai = [
    "opentelemetry-instrumentation-vertexai~=0.50.1",
]

mistralai = [
    "opentelemetry-instrumentation-mistralai~=0.50.1",
]


# Vector Database Instrumentations
chromadb = [
    "opentelemetry-instrumentation-chromadb~=0.50.1",
]
pinecone = [
    "opentelemetry-instrumentation-pinecone~=0.50.1",
]
qdrant = [
    "opentelemetry-instrumentation-qdrant~=0.50.1",
]

# Framework Instrumentations
langchain = [
    "opentelemetry-instrumentation-langchain~=0.50.1",
]
llamaindex = [
    "opentelemetry-instrumentation-llamaindex~=0.50.1",
]

# Mising Framework Instrumentation
# langgraph, litellm


# Convenience groups
llm-all = [
    "basalt_sdk[openai,anthropic,google-generativeai,bedrock,vertex-ai,mistralai]",
]
vector-all = [
    "basalt_sdk[chromadb,pinecone,qdrant]",
]
framework-all = [
    "basalt_sdk[langchain,llamaindex,haystack]",
]
all = [
    "basalt_sdk[llm-all,vector-all,framework-all]",
]

# Development dependencies
dev = [
    # Build tools
    "setuptools",
    "wheel",
    "twine",
    # Test dependencies
    "parameterized",
    "requests", # Often included for testing API clients
    # Modern tooling
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "coverage",
    "mistralai",

    "google-genai",
    "anthropic",
    "openai",
    "opentelemetry-instrumentation-anthropic",
    "opentelemetry-instrumentation-google-generativeai",
    "opentelemetry-instrumentation-google-genai",
    "opentelemetry-instrumentation-openai",
    "opentelemetry-instrumentation-vertexai",
]


# A recommended configuration for Ruff, the modern linter/formatter
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"
