[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basalt-trace-bug-microservices"
version = "0.1.0"
description = "Repro microservices example for trace context propagation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.envs.default]
detached = true
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai==1.60.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry.instrumentation.google_generativeai>=0.51.0",
]

[tool.hatch.envs.default.scripts]
service-a = "uvicorn service_a:app --host 0.0.0.0 --port 8000"
service-b = "uvicorn service_b:app --host 0.0.0.0 --port 8001"
